@@ -10811,6 +10811,9 @@ ul.nav-tabs li.active{
       height: 40px;
       width: 25px;
   }
+  header {
+    height: 62px;
+  }
 }
 
 @media screen and (max-width: 1199px) and (min-width: 992px){
