@@ -1,7 +1,7 @@
 <header>
-  <div class="container-fluid">
+  <div class="container-xl">
     <div class="row">
-      <div class="col-2 offset-1">
+      <div class="col-2 offset-1 offset-xl-0">
         <a href="index.html" class="navbar-brand">
           <img src="images/logo.png" alt="">
         </a>
@@ -10,13 +10,11 @@
         <button type="button" class="navbar-toggler my-3" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="navbar-toggler-icon display-4"></span>
         </button>
-        <!-- <div class="home-btn">Home</div> -->
-
         <div class="line"></div>
       </div>
-      <div class="col-xl-8 offset-xl-1 d-xl-block mr-0 navbar-expand-xl navbar-collapse collapse">
+      <div class="col-xl-8 offset-xl-2 d-xl-block mr-0 navbar-expand-xl navbar-collapse collapse">
         <nav role="navigation">
-          <ul id="navigation" class="nav navbar-nav ml-auto dl-menu">
+          <ul id="navigation" class="nav navbar-nav mx-auto dl-menu">
             <li class="dropdown">
               <a href="#" class="" role="button" aria-expanded="false">Projects <i>›</i></a>
               <ul class="dropdown-menu dl-submenu mt-0 hw__wrapper" role="menu">
