@@ -4,6 +4,7 @@ All notable changes to this project will be documented in this file.
 ## [2.14.0] - 2020-07-19
 ### Fixed
 - Minor problems on most pages.
+- Header adaptive mode.
 
 ## [2.13.0] - 2020-07-19
 ### Fixed
